# axum-tutorial-rs

./: Cargo.toml  README.md
src/: error.rs  log.rs  main.rs  model.rs
src/web/: mod.rs  mv_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
