[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.69"
axum = { version = "0.6.18", features = ["macros"] }
lazy-regex = "2.5.0"
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
strum_macros = "0.25.1"
tokio = { version = "1.29.1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.1", features = ["fs"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
